--- a/style.scss
+++ b/style.scss
@@ -5,56 +5,56 @@
 }
 
 @font-face {
-  font-family: 'Proxima Nova';
-  src: url('assets/ProximaNova-Regular.eot');
-  src: url('assets/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
-    url('assets/ProximaNova-Regular.woff2') format('woff2'),
-    url('assets/ProximaNova-Regular.woff') format('woff'),
-    url('assets/ProximaNova-Regular.ttf') format('truetype');
+  font-family: "Proxima Nova";
+  src: url("assets/ProximaNova-Regular.eot");
+  src: url("assets/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"),
+    url("assets/ProximaNova-Regular.woff2") format("woff2"),
+    url("assets/ProximaNova-Regular.woff") format("woff"),
+    url("assets/ProximaNova-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'FuturaBookC';
-  src: url('assets/FuturaBookC.eot');
-  src: url('assets/FuturaBookC.eot?#iefix') format('embedded-opentype'),
-    url('assets/FuturaBookC.woff2') format('woff2'),
-    url('assets/FuturaBookC.woff') format('woff'),
-    url('assets/FuturaBookC.ttf') format('truetype');
+  font-family: "FuturaBookC";
+  src: url("assets/FuturaBookC.eot");
+  src: url("assets/FuturaBookC.eot?#iefix") format("embedded-opentype"),
+    url("assets/FuturaBookC.woff2") format("woff2"),
+    url("assets/FuturaBookC.woff") format("woff"),
+    url("assets/FuturaBookC.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'FuturaDemiC';
-  src: url('assets/FuturaDemiC.eot');
-  src: url('assets/FuturaDemiC.eot?#iefix') format('embedded-opentype'),
-    url('assets/FuturaDemiC.woff2') format('woff2'),
-    url('assets/FuturaDemiC.woff') format('woff'),
-    url('assets/FuturaDemiC.ttf') format('truetype');
+  font-family: "FuturaDemiC";
+  src: url("assets/FuturaDemiC.eot");
+  src: url("assets/FuturaDemiC.eot?#iefix") format("embedded-opentype"),
+    url("assets/FuturaDemiC.woff2") format("woff2"),
+    url("assets/FuturaDemiC.woff") format("woff"),
+    url("assets/FuturaDemiC.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'FuturaMediumC';
-  src: url('assets/FuturaMediumC.eot');
-  src: url('assets/FuturaMediumC.eot?#iefix') format('embedded-opentype'),
-    url('assets/FuturaMediumC.woff2') format('woff2'),
-    url('assets/FuturaMediumC.woff') format('woff'),
-    url('assets/FuturaMediumC.ttf') format('truetype');
+  font-family: "FuturaMediumC";
+  src: url("assets/FuturaMediumC.eot");
+  src: url("assets/FuturaMediumC.eot?#iefix") format("embedded-opentype"),
+    url("assets/FuturaMediumC.woff2") format("woff2"),
+    url("assets/FuturaMediumC.woff") format("woff"),
+    url("assets/FuturaMediumC.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Yeseva One';
-  src: url('assets/YesevaOne.eot');
-  src: url('assets/YesevaOne.eot?#iefix') format('embedded-opentype'),
-    url('assets/YesevaOne.woff2') format('woff2'),
-    url('assets/YesevaOne.woff') format('woff'),
-    url('assets/YesevaOne.ttf') format('truetype');
+  font-family: "Yeseva One";
+  src: url("assets/YesevaOne.eot");
+  src: url("assets/YesevaOne.eot?#iefix") format("embedded-opentype"),
+    url("assets/YesevaOne.woff2") format("woff2"),
+    url("assets/YesevaOne.woff") format("woff"),
+    url("assets/YesevaOne.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -80,7 +80,7 @@ sans-serif;
 $primary-color: #000000;
 $second-color: #ffffff;
 $second-color2: rgba(255, 255, 255, 0.3);
-$third-color:#E3B873;
+$third-color: #e3b873;
 $button-color: $third-color;
 
 // Headings
@@ -96,7 +96,7 @@ $button-color: $third-color;
 }
 
 .subtitle_black {
-  color: $primary-color
+  color: $primary-color;
 }
 
 // Icons
@@ -130,7 +130,6 @@ $button-color: $third-color;
     top: 14px;
     left: 125px;
   }
-
 }
 
 // Header
@@ -141,12 +140,10 @@ $button-color: $third-color;
   justify-content: space-between;
   background: $primary-color;
   width: 100%;
-  height: 800px;
 }
 
 .header_social {
   width: 6%;
-
 
   &--text {
     position: relative;
@@ -173,8 +170,6 @@ $button-color: $third-color;
       left: 90px;
     }
   }
-
-
 }
 
 .header_wrapper {
@@ -182,12 +177,13 @@ $button-color: $third-color;
 }
 
 .header_banner {
+  position: relative;
   height: 700px;
-  background: red;
-  background: url(assets/banner.jpg);
+  background-image: url(assets/banner.jpg);
+  background-size: cover;
+  background-position: center;
 
   &--main_heding {
-
     position: relative;
     top: 50%;
     font-family: $font-header;
@@ -196,7 +192,7 @@ $button-color: $third-color;
     line-height: 132.8%;
     text-transform: uppercase;
     color: $second-color;
-    width: 550px;
+    width: 100%;
 
     &-orange {
       color: $third-color;
@@ -208,52 +204,59 @@ $button-color: $third-color;
     font-weight: normal;
     font-size: 22px;
     line-height: 30px;
-    width: 450px;
+    width: 92%;
     color: $second-color;
     margin-top: 20px;
     margin-bottom: 45px;
   }
 
-  &--cta {
-    width: 207px;
-    height: 51px;
-    background-color: $button-color;
-    border: 0;
-    font-family: $font-logo;
-    font-size: 13px;
-    text-transform: uppercase;
-    color: $second-color;
-    cursor: pointer;
-    background: $third-color;
-    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
-    border-radius: 2px;
+  &--buttons {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 450px;
+    justify-content: space-around;
 
-    &:hover {
-      background-color: transparent;
-      border: 1px solid $second-color;
+    &-cta {
+      width: 207px;
+      height: 51px;
+      background-color: $button-color;
+      border: 0;
+      font-family: $font-logo;
+      font-size: 13px;
+      text-transform: uppercase;
+      color: $second-color;
+      cursor: pointer;
+      background: $third-color;
+      box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
+      border-radius: 2px;
+
+      &:hover {
+        background-color: transparent;
+        border: 1px solid $second-color;
+      }
     }
-  }
 
-  &--cta2 {
-    width: 207px;
-    height: 51px;
-    border: 1px solid $second-color;
-    box-sizing: border-box;
-    border-radius: 2px;
-    font-family: $font-logo;
-    font-size: 13px;
-    text-transform: uppercase;
-    color: $second-color;
-    background: none;
-    margin-left: 20px;
-    cursor: pointer;
+    &-cta2 {
+      width: 207px;
+      height: 51px;
+      border: 1px solid $second-color;
+      box-sizing: border-box;
+      border-radius: 2px;
+      font-family: $font-logo;
+      font-size: 13px;
+      text-transform: uppercase;
+      color: $second-color;
+      background: none;
+      cursor: pointer;
+    }
   }
 }
 
 .banner_text {
-  position: relative;
+  position: absolute;
   top: 27%;
   left: 4%;
+  max-width: 550px;
 }
 
 .scroll_down {
@@ -280,7 +283,6 @@ $button-color: $third-color;
   }
 }
 
-
 // Navigation
 
 .navigation {
@@ -297,7 +299,7 @@ $button-color: $third-color;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 92%;
   list-style: none;
   color: $second-color;
   font-size: 14px;
@@ -326,13 +328,11 @@ $button-color: $third-color;
     &:hover {
       text-decoration: underline;
     }
-
   }
 
   &--telefon a {
     color: $third-color;
     font-family: $font-logo;
-    font-size: 14px;
     text-transform: uppercase;
   }
 
@@ -340,7 +340,6 @@ $button-color: $third-color;
     width: 161px;
     height: 37px;
     background-color: $button-color;
-    margin-right: 100px;
     border: 0;
     font-family: $font-logo;
     font-size: 13px;
@@ -442,7 +441,6 @@ $button-color: $third-color;
       line-height: 20px;
       color: $second-color;
     }
-
   }
 
   &--navigation {
@@ -595,9 +593,10 @@ $button-color: $third-color;
 
 .video_container {
   position: relative;
-  width: 817px;
-  // height: 434px;
-  background: gray;
+  max-width: 817px;
+  width: 95%;
+  background: url(assets/video_poster.jpg);
+  background-size: cover;
   margin: 0 auto;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
 
@@ -637,7 +636,6 @@ $button-color: $third-color;
       top: 36%;
     }
   }
-
 }
 
 .video {
@@ -745,7 +743,6 @@ $button-color: $third-color;
   padding-top: 3px;
   cursor: pointer;
   font-size: 16px;
-
 }
 
 .control input {
@@ -787,7 +784,7 @@ $button-color: $third-color;
 
 .control_indicator:after {
   box-sizing: unset;
-  content: '';
+  content: "";
   position: absolute;
   display: none;
 }
@@ -827,6 +824,7 @@ $button-color: $third-color;
   display: flex;
   position: relative;
   justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
   align-items: center;
   top: 30px;
@@ -880,9 +878,7 @@ $button-color: $third-color;
   left: 31px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
 
-
   &--header {
-
     font-family: $font-header;
     font-style: normal;
     font-weight: normal;
@@ -995,8 +991,6 @@ $button-color: $third-color;
     width: 300px;
   }
 }
-
-
 
 .c_form_container {
   background-color: #000000;
@@ -1123,7 +1117,6 @@ $button-color: $third-color;
   }
 }
 
-
 // Galery section
 
 .galery {
@@ -1197,7 +1190,6 @@ $button-color: $third-color;
 .photo_column_left {
   margin-top: 71px;
 
-
   &--photo1 {
     margin-bottom: 35px;
   }
@@ -1206,18 +1198,14 @@ $button-color: $third-color;
 }
 
 .photo_column_right {
-
   margin-left: 43px;
-
 
   &--photo1 {
     margin-bottom: 31px;
   }
 
   &--photo2 {}
-
 }
-
 
 // Price design project section
 
@@ -1272,13 +1260,11 @@ $button-color: $third-color;
   }
 }
 
-
 .design_icon {
   background: url(assets/design-icon.png);
   background-repeat: no-repeat;
   background-position: center;
 }
-
 
 // Steps to goal section
 
@@ -1470,7 +1456,6 @@ $button-color: $third-color;
       margin: 5px;
     }
   }
-
 }
 
 .steps_subcaption {
@@ -1479,10 +1464,13 @@ $button-color: $third-color;
 
 .steps_img {
   margin-top: 14px;
+
+  &--img {
+    width: 100%;
+  }
 }
 
 // Team section
-
 
 .team {
   width: 100%;
@@ -1501,10 +1489,9 @@ $button-color: $third-color;
 
   &--line {
     width: 55px;
-    border: 1px solid #E3B873;
+    border: 1px solid #e3b873;
     margin: 55px auto 9px auto;
   }
-
 }
 
 .team_icon {
@@ -1515,7 +1502,8 @@ $button-color: $third-color;
 
 .team_wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
   position: relative;
   width: 76%;
   align-items: center;
@@ -1528,17 +1516,14 @@ $button-color: $third-color;
   width: 337px;
   height: 450px;
 
-
   &:nth-child(1) {
     background: url(assets/team_photo1.png) no-repeat;
     background-position: top 36px right 30px;
-
   }
 
   &:nth-child(2) {
     background: url(assets/team_photo2.png) no-repeat;
     background-position: top 36px right 30px;
-
   }
 
   &:nth-child(3) {
@@ -1579,7 +1564,6 @@ $button-color: $third-color;
       text-align: center;
       color: #959595;
       margin-top: 5px;
-
     }
 
     &-exp {
@@ -1595,8 +1579,6 @@ $button-color: $third-color;
       margin-top: 21px;
     }
   }
-
-
 }
 
 .team_card:nth-child(1) .team_card--img {
@@ -1610,8 +1592,6 @@ $button-color: $third-color;
 .team_card:nth-child(3) .team_card--img {
   background: url(assets/team_photo_icon3.png) no-repeat;
 }
-
-
 
 // Cliets section
 
@@ -1633,14 +1613,15 @@ $button-color: $third-color;
     width: 25%;
     margin: auto;
   }
-
 }
 
 .clients_wrapper {
   display: flex;
   position: relative;
-  justify-content: space-between;
-  width: 87%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 1260px;
+  width: 100%;
   align-items: center;
   margin: auto;
   margin-top: 40px;
@@ -1668,7 +1649,6 @@ $button-color: $third-color;
       width: 170px;
       margin: 38px 0px 0px 24px;
     }
-
   }
 
   &--text {
@@ -1712,19 +1692,18 @@ $button-color: $third-color;
       padding-left: 69px;
     }
   }
-
 }
-
 
 .clients_project {
   display: flex;
-  background-color: #E3B873;
+  background-color: #e3b873;
 }
 
 //Contacts sections
 .contacts_form_footer_wrapper {
   margin: auto;
-  width: 62%;
+  max-width: 880px;
+  width: 100%;
   height: 450px;
   background-color: #000000;
 }
@@ -1741,7 +1720,7 @@ $button-color: $third-color;
     text-align: center;
     text-transform: uppercase;
     padding-top: 34px;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   &--name_phone {
@@ -1789,7 +1768,6 @@ $button-color: $third-color;
     &-input:focus:-ms-input-placeholder {
       color: transparent;
     }
-
   }
 
   &--checkbox {
@@ -1800,7 +1778,7 @@ $button-color: $third-color;
   &--button {
     width: 200px;
     height: 51px;
-    background: #E3B873;
+    background: #e3b873;
     margin-top: 44px;
     box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.1);
     border: 0;
@@ -1811,7 +1789,7 @@ $button-color: $third-color;
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 }
 
@@ -1827,7 +1805,7 @@ $button-color: $third-color;
 .contacts {
   text-align: center;
   margin-top: 150px;
-  background: linear-gradient(to top, #1D1D1D 80%, #ffffff 20%);
+  background: linear-gradient(to top, #1d1d1d 80%, #ffffff 20%);
 }
 
 .contacts_adress {
@@ -1840,10 +1818,10 @@ $button-color: $third-color;
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
-  color: #E3B873;
+  color: #e3b873;
 }
 
-.contacts_icons{
+.contacts_icons {
   margin-top: 40px;
 }
 
@@ -1860,4 +1838,116 @@ $button-color: $third-color;
   height: 100px;
   margin: auto;
   padding-left: 50px;
+}
+
+// mobile version
+
+@media screen and (max-width: 1070px) {
+  .navigation_menu {
+    &--links {
+      display: none;
+    }
+
+    &--button_header {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header_social {
+    display: none;
+  }
+
+  .header_wrapper {
+    width: 100%;
+  }
+
+  .navigation_menu {
+    margin: 0 auto;
+
+    &--logo a {
+      margin-right: 0px;
+    }
+
+    &--telefon a {
+      color: $second-color;
+      font-family: $font-logo;
+      text-transform: uppercase;
+      text-decoration: none;
+    }
+  }
+
+  .scroll_down {
+    display: none;
+  }
+
+
+
+  .header_banner {
+//background-position: center;
+
+    &--buttons {
+      &-cta {
+        width: 338px;
+        border-radius: 0px;
+        margin-bottom: 26px;
+      }
+
+      &-cta2 {
+        width: 338px;
+        border-radius: 0px;
+      }
+    }
+  }
+
+  .banner_text {
+    top: 18%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .navigation {
+    height: 57px;
+    min-width: 375px;
+  }
+
+  .navigation_menu {
+    font-size: 12px;
+
+    &--logo h1 {
+      font-size: 12px;
+    }
+  }
+
+  .header_banner {
+    height: 476px;
+    background-image: url(assets/banner-mobile.jpg);
+
+    &--main_heding {
+      top: 50%;
+      font-size: 23px;
+      line-height: 132.8%;
+      color: $second-color;
+      width: 90%;
+    }
+
+    &--main_description {
+      font-size: 18px;
+      margin-top: 7px;
+      margin-bottom: 14px;
+    }
+  }
+
+  .banner_text {
+    top: 18%;
+    left: 2%;
+    max-width: 340px;
+    min-width: 340px;
+  }
+
+  .decstop {
+    visibility: hidden;
+    font-size: 0px;
+  }
 }
